--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 url: https://y7kim.github.io
 
 # Site settings
-title: Awesome Title
+title: Davao City Apartments
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Live in a beautiful apartment in Davao City!"
 
 
 # Team names, titles and social links
@@ -43,18 +43,10 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
   - title: facebook
     url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
 
-# Postal address (add as many lines as necessary)
+      # Postal address (add as many lines as necessary)
 address:
   - line: 3481 Melrose Place
   - line: Beverly Hills, CA 90210
